@@ -1,0 +1,22 @@
+<HTML>
+<HEAD>
+    Like a hole
+</HEAD>
+<BODY BGCOLOR="puce">
+<FORM ACTION="/shake-some/">
+<select name="multilist" rows=4 multiple>
+<option value="aaa">aaa</a>
+<option value="bbb">bbb</a>
+<option value="ccc">ccc</a>
+<option value="ddd">ddd</a>
+</select>
+
+<select name="singlelist" rows=4>
+<option value="aaa">aaa</a>
+<option value="bbb">bbb</a>
+<option value="ccc">ccc</a>
+<option value="ddd">ddd</a>
+</select>
+</FORM>
+</BODY>
+</HTML>
