@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.112 2004/03/21 05:41:59 petdance Exp $
+# $Id: Changes,v 1.113 2004/03/21 05:54:27 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.73_03
@@ -7,7 +7,9 @@ Revision history for Perl extension WWW::Mechanize
 	  to always enforce plaintext responses. Preliminary support for
 	  Compress::Zlib is also there, but is disabled by default.
 
-	* Added click_button() method.  Thanks, Linda Lee Julien.
+	* Added click_button() and select() methods.  The field() method
+	  can now take an arrayref of values, if appropriate. Thanks,
+	  Linda Lee Julien.
 	  
 	[FIXES]
 	* Still more fixes if the machine you're on doesn't have
